# crosslinking_app

./: Leibniz_zitat.md  README.md  pyproject.toml
dashapp/app/: app.py
dashapp/app/assets/: basic_styles.css
dashapp/app/utils/: app_cards.py
