[tool.poetry]
name = "general-crosslinking-app"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]
readme = "README.md"
packages = [
    {include = "dashapp"}
]

[tool.poetry.dependencies]
# python = ">3.8.1,<3.9"
python = ">3.10.10,<3.11"

dash = {extras = ["diskcache"], version = "^2.13.0"}
gunicorn = "*"
flask="*"
python-dotenv = "^1.0.0"



[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
ruff = "^0.0.267"
pre-commit = "^3.3.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79


